<resources>
    <string name="app_name">Alimentarte</string>
    <string name="register">Register</string>
    <string name="register_with_mail_or_social_networks">Register With Mail or Social Networks</string>
    <string name="usuario">Usuario</string>
    <string name="terms_of_service_and_privacy_policy">Terms of Service and Privacy Policy.</string>
    <string name="submit">Submit</string>
    <string name="social_network">Social Network</string>
    <string name="social_network1">Social Network</string>
    <string name="logo_app">Logo App</string>
    <string name="social_network2">Social Network</string>
    <string name="social_network3">Social Network</string>
    <string name="social_network4">Social Network</string>
    <string name="login">logIn</string>
    <string name="twitter_creator">Twitter creator</string>
    <string name="grupo4">Grupo4</string>
    <string name="grupo4movil">\'@grupo4Movil\'</string>
    <string name="register1">REGISTER</string>
    <string name="bienvenida1">bienvenida1</string>
    <string name="login1">LOGIN</string>
    <string name="todo">TODO</string>
    <string name="test">TODO</string>
    <string name="LogIn">LogIn</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="sexo">Sexo</string>
    <string name="direcci_n">Dirección</string>
    <string name="email">email</string>
    <string name="direccion">direccion</string>
    <string name="contrasena">contrasena</string>
    <string name="ciudad">ciudad</string>
    <string name="celular">celular</string>
    <string name="fotograf_a_de_perfil">Fotografía de Perfil</string>
    <string name="reg_success">Registro Satisfactorio! Se envio un correo electronico para verificar y confirmar su identidad.</string>
    <string name="Contrasena">Contrasena</string>
    <string name="Direccion">Direccion</string>
    <string name="Ciudad">Ciudad</string>
    <string name="Celular">Celular</string>
    <string name="boton_volver">Boton Volver</string>
    <string name="volver">volver</string>
    <string name="back">Back</string>
</resources>